Style and formatting update

--- a/home_rirm/templates/home_rirm/home.html
+++ b/home_rirm/templates/home_rirm/home.html
@@ -27,7 +27,13 @@
                     <br>
                     <h4>About me</h4>
                     <p>A virtuous philomath with ambitions. The passion to learn and explore have helped me to strive and achieve the little that I have in my life till now. It is no surprise that I'm ambitious. One can say, "Ambitious as Vikings" (though my ambitions are completely different). I believe, I still have a lot to learn and explore and I'm always equally excited to learn and explore new horizons.</p>
-                    <button class="btn btn-default btn-lg"> Get in touch</button>
+                    <div class="container-fluid">
+                        <a href="https://www.linkedin.com/in/aditya-chidepatil-a7b543152" class="fa fa-linkedin"></a>
+                        <a href="https://twitter.com/_adityacpatil" class="fa fa-twitter"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100006380371210" class="fa fa-facebook"></a>
+                        <a href="https://www.instagram.com/dcifr_/" class="fa fa-instagram"></a>
+                        <a href="https://github.com/usr-Aditya" class="fab fa-github"></a>
+                    </div>
                 </div>
             </div>
         </div>
