--- a/home_rirm/templates/home_rirm/home.html
+++ b/home_rirm/templates/home_rirm/home.html
@@ -32,7 +32,7 @@
                         <a href="https://twitter.com/_adityacpatil" class="fa fa-twitter"></a>
                         <a href="https://www.facebook.com/profile.php?id=100006380371210" class="fa fa-facebook"></a>
                         <a href="https://www.instagram.com/dcifr_/" class="fa fa-instagram"></a>
-                        <a href="https://github.com/usr-Aditya" class="fab fa-github"></a>
+                        <a href="https://github.com/usr-Aditya" class="fa fa-github"></a>
                     </div>
                 </div>
             </div>
