Style and formatting update

--- a/home_rirm/static/home_rirm/css/home.css
+++ b/home_rirm/static/home_rirm/css/home.css
@@ -92,16 +92,16 @@ body {
 
   .fa {
     padding: 25px;
-    font-size: 50px;
+    font-size: 50px !important;
     width: 100px;
     text-align: center;
-    text-decoration: none;
+    text-decoration: none !important;
     margin: 15px 10px;
     border-radius: 50%;
   }
   
   .fa:hover {
-      opacity: 0.7;
+      opacity: 0.85;
   }
   
   .fa-facebook {
