--- a/student_app/templates/student_app/home.html
+++ b/student_app/templates/student_app/home.html
@@ -26,9 +26,9 @@
         <br>
         <form method="POST" action="{% url 'student-search' %}">
             {% csrf_token %}
-            <span style="display: inline-block; width: 85%; float: left;">
+            <span style="width: 85%; float: left;">
             <input class="form-control" id="myInput" type="text" placeholder="Search student by name" name="searched"></span>
-            <span style="display: inline-block; float: right;"><button class="btn btn-default" style="color: #1abc9c;">Search</button></span>
+            <span style="float: right;"><button class="btn btn-default" style="color: #1abc9c;">Search</button></span>
                 <br><br>
         </form>
         <br>
@@ -36,7 +36,9 @@
     <table class="table table-hover">
         <thead>
         <tr style="background-color: #fff; color: #1abc9c;">
-            <th style="text-align: center !important;">Name | Update | Delete</th>
+            <th style="text-align: center !important;">Name</th>
+            <th style="text-align: center !important;">Update</th>
+            <th style="text-align: center !important;">Delete</th>
             <th style="text-align: center !important;">Roll Number</th>
             <th style="text-align: center !important;">Class</th>
             <th style="text-align: center !important;">School</th>
@@ -50,10 +52,14 @@
                     <tr>
                     <td>
                     {{student.name}}
+                    </td>
+                    <td>
                     <a href="{% url 'student-update' student.roll_no %}" 
                     style="color: inherit; text-decoration: none;">
                         <glyphicon class="glyphicon glyphicon-pencil" style="margin-left: 40px;"></glyphicon>
                     </a>
+                </td>
+                <td>
                     <a href="{% url 'student-delete' student.roll_no %}" 
                     style="color: inherit; text-decoration: none;">
                         <glyphicon class="glyphicon glyphicon-remove" style="margin-left: 40px;"></glyphicon>
