--- a/student_app/templates/student_app/studentdetails.html
+++ b/student_app/templates/student_app/studentdetails.html
@@ -35,7 +35,9 @@
         <thead>
         <tr style="background-color: #fff; color: #1abc9c;">
             <!-- <th>Detail</th> -->
-            <th style="text-align: center !important;">Name | Update | Delete</th>
+            <th style="text-align: center !important;">Name</th>
+            <th style="text-align: center !important;">Update</th>
+            <th style="text-align: center !important;">Delete</th>
             <th style="text-align: center !important;">Roll No</th>
             <th style="text-align: center !important;">Details</th>
 
@@ -44,11 +46,14 @@
         <tbody class="text-center">
             {% for student in studentacademics %}
                     <tr>
-                        <td> {{student.roll_no.name}}
+                        <td> {{student.roll_no.name}}</td>
+                        <td>
                             <a href="{% url 'academics-update' student.id %}" 
                             style="color: inherit; text-decoration: none;">
                                 <glyphicon class="glyphicon glyphicon-pencil" style="margin-left: 40px;"></glyphicon>
                             </a>
+                        </td>
+                        <td>
                             <a href="{% url 'academics-delete' student.id %}" 
                             style="color: inherit; text-decoration: none;">
                                 <glyphicon class="glyphicon glyphicon-remove" style="margin-left: 40px;"></glyphicon>
